--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "chan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "mongodb": "^4.12.1",
     "mongoose": "^6.8.0"
   }
 }
